--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
 	"dependencies": {
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"dotenv": "^16.4.7",
 		"lucide-react": "^0.477.0",
 		"next": "15.2.0",
+		"openai": "^4.86.1",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"tailwind-merge": "^3.0.2",
