misc: clean unused setup and config

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -15,7 +15,7 @@
 		"^@/(.*)$",
 		"^[./]"
 	],
-	"importOrderSeparation": true,
+	"importOrderSeparation": false,
 	"importOrderSortSpecifiers": true,
 	"importOrderBuiltinModulesToTop": true,
 	"plugins": [
