--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
 		"**/*.ts",
 		"**/*.tsx",
 		".next/types/**/*.ts",
-		"types/**/*.ts"
+		"types/**/*.ts",
+		"types/**/*.d.ts"
 	],
 	"exclude": ["node_modules"]
 }
